# espFoC

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  LICENSE  README.md  changelog.txt  esp_foc.c  esp_foc_consts.c  esp_foc_control_current_mode_sensored.c  esp_foc_control_current_mode_sensorless.c  esp_foc_control_voltage_mode_sensored.c  esp_foc_core.c  esp_foc_observers.c  esp_foc_pll_observer.c  esp_foc_scope.c  esp_foc_simu_observer.c  esp_foc_sine_cosine.c  idf_component.yml  linker.lf
.github/workflows/: espfoc_flow.yaml
app/: CMakeLists.txt  Kconfig.sysbuild  prj.conf  sysbuild.cmake
app/boards/: esp32s3_devkitm_procpu.overlay
app/espfoc_app/: esp_foc_app_shell.c  esp_foc_main.c  esp_foc_motor_control_firmware_pilot.c  esp_foc_user.c
app/espfoc_motor/: CMakeLists.txt  esp_foc_hardware_if.c  esp_foc_hardware_if.h  esp_foc_motor.c  prj.conf
app/espfoc_motor/boards/: esp32s3_devkitm_appcpu.overlay
common/ipc/: esp_foc_ipc.c
common/motor_control/: esp_foc.c  esp_foc_consts.c  esp_foc_pid.c  esp_foc_svm.c
doc/: AXIS_SHELL.md  PIVOT_SCOPE_SHELL.md  SCOPE_CHANNELS.md  SCOPE_TOOL.md  SHELL.md  TUNING.md
doc/images/: README.md
docs/: DRIVERS_FIXED_POINT.md  PLAN_FIXED_POINT_ONLY_REFACTOR.md  PLAN_Q16_FULL_PIPELINE.md  PLAN_STATUS.md
drivers/: current_sensor_adc.c  inverter_3pwm_ledc.c  inverter_3pwm_mcpwm.c  os_interface.c  rotor_sensor_as5600.c  rotor_sensor_dummy.c  rotor_sensor_open_loop.c  rotor_sensor_pcnt.c
drivers/espFoC/: current_sensor_adc.h  inverter_3pwm_ledc.h  inverter_3pwm_mcpwm.h  rotor_sensor_dummy.h  rotor_sensor_open_loop.h
esp32/: inverter_3pwm_ledc.c  rotor_sensor_analog.c
esp32/espFoC/: inverter_3pwm_ledc.h  rotor_sensor_analog.h
esp_platform/: os_interface.c
examples/axis_sensored/: CMakeLists.txt  sdkconfig.defaults
examples/axis_sensored_iq31/: .gitignore  CMakeLists.txt  sdkconfig.defaults
examples/axis_shell/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32s3
examples/axis_simple/: .gitignore  CMakeLists.txt  sdkconfig.defaults
examples/axis_tuning/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3
examples/current_control/: sdkconfig.defaults
examples/freeruning_foc/: README.md  sdkconfig.defaults
examples/kconfig/: axis_shell.kconfig  hw_axis_sensored.kconfig  hw_axis_simple.kconfig  hw_axis_tuning.kconfig  hw_test_encoder.kconfig  hw_test_inverter.kconfig
examples/microROS_FoC/: README.md  sdkconfig.defaults
examples/open_loop/: sdkconfig.defaults
examples/simple_motor_tester/: README.md
examples/simple_servo/: README.md  sdkconfig.defaults
examples/simple_velocity/: CMakeLists.txt  README.md
examples/speed_control/: README.md  sdkconfig.defaults
examples/stubs/: main.cpp  motor_hardware_stub.c  motor_hardware_stub.h
examples/tuner_demo/: CMakeLists.txt  run_qemu.py  sdkconfig.defaults
examples/tuner_studio_target/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32
examples/unit_test_runner/: CMakeLists.txt  README.md  pytest_espfoc_unittest.py  run_unit_tests_qemu.py  sdkconfig  sdkconfig.defaults
include/espFoC/: current_sensor_interface.h  esp_foc.h  esp_foc_adc_cali_lut.h  esp_foc_axis.h  esp_foc_axis_iq31.h  esp_foc_axis_tuning.h  esp_foc_bridge_uart.h  esp_foc_calibration.h  esp_foc_controls.h  esp_foc_err.h  esp_foc_estimator_q16.h  esp_foc_in_the_loop.h  esp_foc_injection.h  esp_foc_iq31_api.h  esp_foc_link.h  esp_foc_motor_interface.h  esp_foc_observer_interface.h  esp_foc_pid.h  esp_foc_pll_observer.h  esp_foc_scope.h  esp_foc_servo.h  esp_foc_servo_position.h  esp_foc_servo_speed.h  esp_foc_simu_observer.h  esp_foc_tuner.h  esp_foc_units.h  esp_foc_units_iq31.h  esp_foc_units_q16.h  foc_math.h  inverter_interface.h  modulator.h  os_interface.h  pid_controller.h  rotor_sensor_interface.h  space_vector_modulator.h
include/rust/: esp_foc_ffi.h
legacy/: test_observers_q16.c
legacy/observers/: esp_foc_kf_observer.c  esp_foc_pll_observer.c  esp_foc_simu_observer.c
rust/: Cargo.toml  README.md  build.rs  sdkconfig.defaults
rust/.cargo/: config.toml
rust/esp-foc/: Cargo.toml
rust/esp-foc-sys/: Cargo.toml
rust/esp-foc-sys/src/: lib.rs
rust/esp-foc/src/: lib.rs
rust/examples/: open_loop_voltage_ramp.rs
rust/src/: lib.rs
scripts/: build_samples.sh  esp_foc_debug.py  esp_foc_gdbinit.cmd  gen_iq31_sin_lut.py  gen_pi_gains.py  reorg_drivers.sh  run_shell_qemu.py  test_gen_pi_gains.py  verify_goldens.py
scripts/motors/: README.md  default.json  mf400525t.json  mf400540t.json
source/calibration/: esp_foc_calibration_axis.c  esp_foc_calibration_format.c  esp_foc_calibration_nvs.c
source/drivers/: current_sensor_adc.c  current_sensor_adc_one_shot.c  driver_q16_local.h  esp_foc_adc_cali_lut.c  esp_foc_bridge_uart.c  esp_foc_bridge_usbcdc.c  esp_foc_encoder_as5048.c  esp_foc_encoder_as5600.c  esp_foc_encoder_pcnt.c  esp_foc_encoder_simu.c  esp_foc_inverter_mcpwm.c  inverter_3pwm_ledc.c  inverter_3pwm_mcpwm.c  (+12 more)
src/: esp_foc.c  esp_foc_consts.c  esp_foc_our_sin_cos.c  esp_foc_pid.c  esp_foc_svm.c
test/: CMakeLists.txt  README.md  golden_motors.json  mock_drivers.c  mock_drivers.h  test_align_direction.c  test_angle_predictor.c  test_autogen_gains.c  test_axis_flow.c  test_axis_iq31_api.c  test_axis_retune.c  test_biquad_q16.c  test_calibration.c  test_design_mpz.c  test_driver_iq31_api.c  test_driver_mocks.c  test_driver_q16_api.c  test_esp_foc_encoder_simu.c  test_esp_foc_scope.c  test_espfoc_shell_parse.c  test_estimator_q16.c  test_float_modulator_ref.h  test_foc_itl_integration.c  test_foc_itl_plant.c  test_foc_math.c  test_foc_math_iq31.c  test_foc_pipeline_iq31.c  test_foc_pipeline_q16.c  test_injection.c  test_iq31.c  test_isensor_adc.c  test_link.c  test_lp_filter.c  test_lp_filter_iq31.c  test_modulator_iq31.c  test_modulator_q16.c  test_observers_iq31.c  test_observers_trajectory_iq31.c  test_pid.c  test_pid_iq31.c  (+7 more)
tests/: test_invariant_esp_foc_tuner.c
(+352 files in other folders)
